[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/icons/audioOn.png" type="Texture" id=1]
[ext_resource path="res://assets/white.png" type="Texture" id=2]
[ext_resource path="res://scripts/UI.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/musicOn.png" type="Texture" id=4]
[ext_resource path="res://assets/circle.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 40, 40 )

[sub_resource type="CircleShape2D" id=6]
radius = 20.0

[node name="UI" type="Node2D"]
script = ExtResource( 3 )

[node name="slots" type="Position2D" parent="."]
position = Vector2( -58.6069, -112.352 )

[node name="slot1" type="TouchScreenButton" parent="slots"]
position = Vector2( 920, 200 )
shape = SubResource( 1 )
shape_centered = false

[node name="back" type="Sprite" parent="slots/slot1"]
self_modulate = Color( 0.607843, 0.847059, 0.835294, 0.784314 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="slots/slot1"]
scale = Vector2( 3.75, 3.75 )

[node name="slot2" type="TouchScreenButton" parent="slots"]
position = Vector2( 920, 300 )
shape = SubResource( 2 )
shape_centered = false

[node name="back" type="Sprite" parent="slots/slot2"]
self_modulate = Color( 0.607843, 0.847059, 0.835294, 0.784314 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="slots/slot2"]
scale = Vector2( 3.75, 3.75 )

[node name="slot3" type="TouchScreenButton" parent="slots"]
position = Vector2( 920, 400 )
shape = SubResource( 3 )
shape_centered = false

[node name="back" type="Sprite" parent="slots/slot3"]
self_modulate = Color( 0.607843, 0.847059, 0.835294, 0.784314 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="slots/slot3"]
scale = Vector2( 3.75, 3.75 )

[node name="slot4" type="TouchScreenButton" parent="slots"]
position = Vector2( 920, 500 )
shape = SubResource( 4 )
shape_centered = false

[node name="back" type="Sprite" parent="slots/slot4"]
self_modulate = Color( 0.607843, 0.847059, 0.835294, 0.784314 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="slots/slot4"]
scale = Vector2( 3.75, 3.75 )

[node name="slot5" type="TouchScreenButton" parent="slots"]
position = Vector2( 1020, 200 )
shape = SubResource( 5 )
shape_centered = false

[node name="back" type="Sprite" parent="slots/slot5"]
self_modulate = Color( 0.607843, 0.847059, 0.835294, 0.784314 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="slots/slot5"]
scale = Vector2( 3.75, 3.75 )

[node name="slot6" type="TouchScreenButton" parent="slots"]
position = Vector2( 1020, 300 )
shape = SubResource( 1 )
shape_centered = false

[node name="back" type="Sprite" parent="slots/slot6"]
self_modulate = Color( 0.607843, 0.847059, 0.835294, 0.784314 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="slots/slot6"]
scale = Vector2( 3.75, 3.75 )

[node name="slot7" type="TouchScreenButton" parent="slots"]
position = Vector2( 1020, 400 )
shape = SubResource( 2 )
shape_centered = false

[node name="back" type="Sprite" parent="slots/slot7"]
self_modulate = Color( 0.607843, 0.847059, 0.835294, 0.784314 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="slots/slot7"]
scale = Vector2( 3.75, 3.75 )

[node name="slot8" type="TouchScreenButton" parent="slots"]
position = Vector2( 1020, 500 )
shape = SubResource( 3 )
shape_centered = false

[node name="back" type="Sprite" parent="slots/slot8"]
self_modulate = Color( 0.607843, 0.847059, 0.835294, 0.784314 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="slots/slot8"]
scale = Vector2( 3.75, 3.75 )

[node name="sound" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 25.7115, 25.1644 )
shape = SubResource( 6 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="sound"]
self_modulate = Color( 0.607843, 0.847059, 0.835294, 0.784314 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="sound"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="music" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 25.1644, 68.9287 )
shape = SubResource( 6 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="music"]
self_modulate = Color( 0.607843, 0.847059, 0.835294, 0.784314 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="music"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[connection signal="pressed" from="slots/slot1" to="." method="_on_slot_1_pressed"]
[connection signal="pressed" from="slots/slot2" to="." method="_on_slot_2_pressed"]
[connection signal="pressed" from="slots/slot3" to="." method="_on_slot_3_pressed"]
[connection signal="pressed" from="slots/slot4" to="." method="_on_slot_4_pressed"]
[connection signal="pressed" from="slots/slot5" to="." method="_on_slot_5_pressed"]
[connection signal="pressed" from="slots/slot6" to="." method="_on_slot6_pressed"]
[connection signal="pressed" from="slots/slot7" to="." method="_on_slot7_pressed"]
[connection signal="pressed" from="slots/slot8" to="." method="_on_slot8_pressed"]
[connection signal="pressed" from="sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="music" to="." method="_on_music_pressed"]
